# ChangeLog for dev-lang/python
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.431 2009/11/07 23:17:35 arfrever Exp $

  07 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-3.1.1-r1.ebuild:
  Make logging module ignore absence of multiprocessing module (bug
  #291109).

*python-2.6.4 (30 Oct 2009)

  30 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +python-2.6.4.ebuild:
  Version bump.

  24 Oct 2009; Alexey Shvetsov <alexxy@gentoo.org> python-2.6.3.ebuild,
  python-3.1.1-r1.ebuild:
  Add ~mips keyword #287383

  19 Oct 2009; Raúl Porcel <armin76@gentoo.org> python-2.6.2-r1.ebuild:
  s390/sh stable wrt #277645

  17 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-2.5.4-r3.ebuild, python-2.6.3.ebuild, python-3.1.1-r1.ebuild:
  Fix paths passed to python_mod_optimize() and python_mod_cleanup() (bug
  #288354).

  14 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  python-3.1.1-r1.ebuild:
  Keyword ~sparc-fbsd wrt #287383.

  14 Oct 2009; Alexis Ballier <aballier@gentoo.org> python-2.6.3.ebuild:
  keyword ~sparc-fbsd

  03 Oct 2009; Fabian Groffen <grobian@gentoo.org> python-2.4.6.ebuild,
  python-2.5.4-r3.ebuild, python-2.6.2-r2.ebuild, python-2.6.3.ebuild,
  python-3.1.1-r1.ebuild:
  Python's _locale module needs libintl, which on non-Linux is in gettext,
  depend on virtual/libintl for that case

*python-2.6.3 (02 Oct 2009)

  02 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +python-2.6.3.ebuild:
  Version bump.

  02 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-2.6.2-r2.ebuild, python-3.1.1-r1.ebuild:
  Remove a workaround for missing keywords.

  27 Sep 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  python-2.4.6.ebuild, python-2.5.4-r3.ebuild, python-2.6.2-r2.ebuild,
  python-3.1.1-r1.ebuild: