@@ -74,7 +74,7 @@ DIST python-gentoo-patches-3.1.1-r3.tar.bz2 8874 RMD160 06058325dec089258b5e6151
 EBUILD python-2.4.6.ebuild 10705 RMD160 d3b28738a1387b058703b6fc5fc0d707b278419d SHA1 0cdae380e398818bfad33dd744ee238d5c076ccd SHA256 142d6dce9d46a288d2a69014a89066e13f098c62266c290def7a46918ad84cb4
 EBUILD python-2.5.4-r3.ebuild 11854 RMD160 bb8c9f94814f22bebd8fd1c22764c01f665303bc SHA1 79b2de2d181ccc2d3aab224bd59d8b8d564afa52 SHA256 07c8b39dca5110193b418b3e3ca1a3f26e4b108934d446a8c2ed6b5197560b6c
 EBUILD python-2.6.2-r2.ebuild 19374 RMD160 210dca0e38ea8cb81c556e7e089dd32cf29bac3d SHA1 4b646a62cc9f4f533a339661d3f029fc47cc9e69 SHA256 3978c26d5bad92c77f971d00babd3ba44e593214e90161873e963b6616179830
-EBUILD python-2.6.4.ebuild 19405 RMD160 64b7e2fa4febd3e8d4e5132646e019354fc10ab3 SHA1 54e7bf00c3fccdfd07ef388a81fa92916f93927f SHA256 1cdc6b453c6286a1829a54fa04c253b911c0d6213be46d18aef3b7723b014000
-EBUILD python-3.1.1-r1.ebuild 17938 RMD160 744ef05869d867b58d044572d0532cf31c06c7d8 SHA1 8f45889a07c6f1b0d0ad022f084318c160506d6f SHA256 3072651f5d997244790ad875b082bd8209a873156c2657ccb7c507f1410634e0
-MISC ChangeLog 75413 RMD160 834edff638286985001c359167f1f9a7150be556 SHA1 73d8c7cb6cec6504a84994fa7a72c2c445a18fea SHA256 ebd61e5273a21ccb58913999b1a2b713407639320c22518a4d2e1777b30edec0
+EBUILD python-2.6.4.ebuild 19436 RMD160 02236d0729a485bbede1a44093d76fd5a62ea593 SHA1 7e07ba5603898bb0c85acf41aa104f27279dff03 SHA256 3330971548f6a1040e9445738890278f2a25d8c2882487a141eb90935189afcc
+EBUILD python-3.1.1-r1.ebuild 17963 RMD160 72cb229576080801b5a2465eaa27a9bf9c6e1dc8 SHA1 dfa884932f8260ccf65c94e4fd97b267b4c7248e SHA256 c6f07e3656b58400c627cc841e21b980162608cfe6cf6b601634893f26cee134
+MISC ChangeLog 75592 RMD160 e3fb321ea4108003025594d3c9d8d6c9fac8a4de SHA1 518d0c2c606924db1978ff4b3672828edb37c2dc SHA256 00db4bb5109b74aceb2a039d45dd78bde63dabc6d75f7ee8d91d32921a163668
 MISC metadata.xml 501 RMD160 0cc2c851a7c59ed77809c1f3ac2130710f0700e9 SHA1 59bfd447cf15419f68077913de7228f3556ce6e3 SHA256 51c09ee221463f34722a6c655db605a7d6d683069453d173947e4416a43a071c
