@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.431 2009/11/07 23:17:35 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.432 2009/11/29 15:29:21 arfrever Exp $
+
+  29 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  python-2.6.4.ebuild, python-3.1.1-r1.ebuild:
+  _ctypes module doesn't work with GCC's internal libffi.
 
   07 Nov 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   python-3.1.1-r1.ebuild:
